feat: 상영중인 영화 조회 수정
금일 상영 영화 조회 => 모든 상영정보 조회